--- a/rails-angular/src/js/views/movies/show.html
+++ b/rails-angular/src/js/views/movies/show.html
@@ -9,7 +9,23 @@
 
 <hr>
 
-{{movies.movie}}
+<h4>Comments</h4>
 <ul>
   <li ng-repeat="comment in movies.movie.comments track by $index"><strong>{{comment.author}}</strong> - {{comment.content}}</li>
 </ul>
+
+{{movies.movie.id}}
+
+<h4>Add a Comment</h4>
+
+{{movies.newComment}}
+
+<form ng-submit="movies.addComment()">
+  <label>Screen Name</label><br>
+  <input type="text" ng-model="movies.newComment.author" name="author" placeholder="Choose a name"><br>
+
+  <label>Comment</label><br>
+  <textarea name="content" ng-model="movies.newComment.content" rows="8" cols="40"></textarea><br>
+
+  <input type="submit" value="submit">
+</form>
